@@ -365,32 +365,35 @@ public class GraphMapper<I extends WritableComparable, V extends Writable,
 
         // Do some initial setup (possibly starting up a Zookeeper service)
         context.setStatus("setup: Initializing Zookeeper services.");
-        Path[] fileClassPaths = DistributedCache.getLocalCacheArchives(conf);
-        String zkClasspath = null;
-        if(fileClassPaths == null) {
-            if(LOG.isInfoEnabled()) {
-                LOG.info("Distributed cache is empty. Assuming fatjar.");
-            }
-            String jarFile = context.getJar();
-            if (jarFile == null) {
-               jarFile = findContainingJar(getClass());
-            }
-            zkClasspath = jarFile.replaceFirst("file:", "");
-        } else {
-            StringBuilder sb = new StringBuilder();
-            sb.append(fileClassPaths[0]);
+        if (!conf.getBoolean(GiraphJob.LOCAL_TEST_MODE,
+                GiraphJob.LOCAL_TEST_MODE_DEFAULT)) {
+            Path[] fileClassPaths = DistributedCache.getLocalCacheArchives(conf);
+            String zkClasspath = null;
+            if(fileClassPaths == null) {
+                if(LOG.isInfoEnabled()) {
+                    LOG.info("Distributed cache is empty. Assuming fatjar.");
+                }
+                String jarFile = context.getJar();
+                if (jarFile == null) {
+                   jarFile = findContainingJar(getClass());
+                }
+                zkClasspath = jarFile.replaceFirst("file:", "");
+            } else {
+                StringBuilder sb = new StringBuilder();
+                sb.append(fileClassPaths[0]);
 
-            for (int i = 1; i < fileClassPaths.length; i++) {
-                sb.append(":");
-                sb.append(fileClassPaths[i]);
+                for (int i = 1; i < fileClassPaths.length; i++) {
+                    sb.append(":");
+                    sb.append(fileClassPaths[i]);
+                }
+                zkClasspath = sb.toString();
             }
-            zkClasspath = sb.toString();
-        }
 
-        if (LOG.isInfoEnabled()) {
-            LOG.info("setup: classpath @ " + zkClasspath);
+            if (LOG.isInfoEnabled()) {
+                LOG.info("setup: classpath @ " + zkClasspath);
+            }
+            conf.set(GiraphJob.ZOOKEEPER_JAR, zkClasspath);
         }
-        conf.set(GiraphJob.ZOOKEEPER_JAR, zkClasspath);
         String serverPortList =
             conf.get(GiraphJob.ZOOKEEPER_LIST, "");
         if (serverPortList == "") {
